--- a/random-number-generator-demo/contract/.env.example
+++ b/random-number-generator-demo/contract/.env.example
@@ -2,6 +2,8 @@ DEPLOYMENT_PRIVATE_KEY=
 REGISTRY_CONTRACT=
 BASE_SEPOLIA_RPC=https://base-sepolia-public.nodies.app
 
+# base sepolia registry contract
+# REGISTRY_CONTRACT=0x4A4c49B5BF6dA097a2Ee7147580B3847d50d8990
 
 # for verification
 BASESCAN_API_KEY=
