refactor: local testing

--- a/random-number-generator-demo/contract/.env.example
+++ b/random-number-generator-demo/contract/.env.example
@@ -1,12 +1,8 @@
 DEPLOYMENT_PRIVATE_KEY=
-REGISTRY_CONTRACT=
 BASE_SEPOLIA_RPC=https://base-sepolia-public.nodies.app
 
 # base sepolia registry contract
-# REGISTRY_CONTRACT=0x4A4c49B5BF6dA097a2Ee7147580B3847d50d8990
+REGISTRY_CONTRACT=0x0b518488D461bC692874f3858A1038b0A1Db9179
 
 # for verification
 BASESCAN_API_KEY=
-
-# for fulfill requests
-OPERATOR_PRIVATE_KEY=
