fix: local testing

--- a/oracle/.env.example
+++ b/oracle/.env.example
@@ -2,6 +2,9 @@
 PRIVATE_KEY=0x_your_private_key_here
 ETHERSCAN_API_KEY=your_basescan_api_key_here
 
+# Registry contract
+REGISTRY_CONTRACT=0x0b518488D461bC692874f3858A1038b0A1Db9179
+
 # Oracle address (get from: make get-address)
 ORACLE_ADDRESS=0x25ac02ed03af082bfc4dce55eadcd085fd501739
 
