--- a/oracle/requirements.txt
+++ b/oracle/requirements.txt
@@ -1,7 +1,7 @@
 flask==3.0.0
 requests==2.31.0
-eth-account==0.11.0
+eth_account==0.13.7
 eth-utils==4.0.0
 rlp==4.0.0
 eth-rlp==1.0.1
-web3==6.15.1
+web3==7.14.0
