--- a/random-number-generator/contract/package.json
+++ b/random-number-generator/contract/package.json
@@ -4,10 +4,10 @@
   "description": "Random Number Generator Contract for Sparsity Nova Platform",
   "scripts": {
     "compile": "hardhat compile",
-    "deploy:local": "hardhat run scripts/deploy.js --network localhost",
-    "deploy:sepolia": "hardhat run scripts/deploy.js --network baseSepolia",
+    "deploy:local": "hardhat run scripts/deploy-rng.js --network localhost",
+    "deploy:sepolia": "hardhat run scripts/deploy-rng.js --network baseSepolia",
     "test:local": "hardhat run scripts/test-request.js --network localhost",
-    "check:local": "hardhat run scripts/check-result.js --network localhost",
+    "check:local": "hardhat run scripts/check-results.js --network localhost",
     "verify": "hardhat verify --network baseSepolia"
   },
   "devDependencies": {
