--- a/random-number-generator-consumer/contract/.env.example
+++ b/random-number-generator-consumer/contract/.env.example
@@ -5,7 +5,7 @@ DEPLOYMENT_PRIVATE_KEY=0x...
 BASE_SEPOLIA_RPC=https://sepolia.base.org
 
 # RandomNumberGenerator contract address
-RNG_CONTRACT_ADDRESS=0x...
+RNG_CONTRACT_ADDRESS=0x5a5De497725Da2751F743a0cC922cB8F91811c28
 
 # Basescan API key for verification
 BASESCAN_API_KEY=
