--- a/secured-chat-bot/frontend/package.json
+++ b/secured-chat-bot/frontend/package.json
@@ -9,10 +9,12 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@noble/hashes": "^2.0.1",
+        "@noble/secp256k1": "^3.0.0",
+        "cbor-web": "^9.0.2",
         "next": "^14.2.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "cbor-web": "^9.0.2"
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
         "@types/node": "^20.0.0",
