--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@ secured-chat-bot/frontend/node_modules
 secured-chat-bot/frontend/.next
 secured-chat-bot/frontend/out
 .vscode/
-
-
+random-number-generator-frontend/node_modules
+random-number-generator-frontend/dist
 
