--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,14 @@ secured-chat-bot/frontend/out
 random-number-generator-frontend/node_modules
 random-number-generator-frontend/dist
 
+# nova-app-template
+nova-app-template/enclave/.venv
+nova-app-template/enclave/__pycache__
+nova-app-template/enclave/frontend-dist
+nova-app-template/frontend/node_modules
+nova-app-template/frontend/.next
+nova-app-template/frontend/out
+nova-app-template/frontend/dist
+nova-app-template/contracts/cache
+nova-app-template/contracts/out
+nova-app-template/contracts/lib
