--- a/nova-app-template/enclave/Dockerfile
+++ b/nova-app-template/enclave/Dockerfile
@@ -6,11 +6,12 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application
-COPY app.py .
+# Copy application files
+COPY app.py odyn.py routes.py tasks.py ./
+COPY frontend-dist/ ./frontend-dist/ 2>/dev/null || true
 
-# Expose application port
-EXPOSE 5000
+# Expose the "App Listening Port" (must match enclaver.yaml ingress)
+EXPOSE 8000
 
 # Run the application
 CMD ["python", "app.py"]
