--- a/nova-app-template/enclave/Dockerfile
+++ b/nova-app-template/enclave/Dockerfile
@@ -2,6 +2,9 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# Default to mock mode outside enclave;
+ENV IN_ENCLAVE=false
+
 # Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
