--- a/echo-vault/Dockerfile
+++ b/echo-vault/Dockerfile
@@ -26,4 +26,4 @@ COPY --from=frontend-build /frontend/dist ./frontend
 EXPOSE 8000
 
 # Run the application
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "app.py"]
