--- a/echo-vault/frontend/package.json
+++ b/echo-vault/frontend/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^18.2.0",
     "lucide-react": "^0.344.0",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "cbor-web": "^9.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
