--- a/nova-kms-client/enclaver.yaml
+++ b/nova-kms-client/enclaver.yaml
@@ -5,6 +5,10 @@ target: "nitro-enclave"
 sources:
   - Dockerfile
 
+ingress:
+  - listen_port: 8000
+  - listen_port: 18001
+
 egress:
   allow:
     - 0.0.0.0/0:443
