--- a/nova-kms-client/enclave/requirements.txt
+++ b/nova-kms-client/enclave/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.109.2
-uvicorn==0.27.1
+fastapi==0.128.6
+uvicorn==0.40.0
 httpx==0.27.0
-apscheduler==3.10.4
-web3==6.15.1
-requests==2.31.0
-cryptography
-pydantic>=2.0.0
+APScheduler==3.11.2
+web3==7.14.1
+requests==2.32.5
+cryptography==46.0.4
+pydantic==2.12.5
